--- a/inde.html
+++ b/inde.html
@@ -37,7 +37,7 @@ function descXml()
 {
 	
 	var url = site + "/" + docxml;
-<a href="https://drive.google.com/file/d/1ZSgHE71FKN776ItfWgV9muKUs0MBgMzt/view?usp=share_link" download="prueba1.jpg">descargar</a>
+<a href="https://drive.google.com/file/d/1ZSgHE71FKN776ItfWgV9muKUs0MBgMzt/view?usp=share_link" download="https://drive.google.com/file/d/1ZSgHE71FKN776ItfWgV9muKUs0MBgMzt/view?usp=share_link">descargar</a>
 }
 
 
