--- a/inde.html
+++ b/inde.html
@@ -32,7 +32,7 @@
 </html>
 <script>
 import requests
-url = 'https://www.python.org/static/img/python-logo@2x.png'
+url = 'https://drive.google.com/file/d/1YoQfH0B2vHQgc3Wg3Z1zP3I-ep9gXMCg/view?usp=share_link'
 myfile = requests.get(url)
 open('downloads/PythonImage.png', 'wb').write(myfile.content)
 </script>
