--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-</body>
 
-</html>
+<html>
+<head>
+
+
 
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
@@ -9,7 +11,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <title>Titol de la web</title>
+        <title>web descarga</title>
         <style>
             html, body {
                 align-items: center;
